updates to fix http address

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <meta name="description" content="Tool for finding map extents">
     <meta name="author" content="vern wolfley">
-    <link type="text/plain" rel="author" href="http://geo.azmag.gov/maps/..../humans.txt">
-    <meta name="contact" content="www.azmag.gov">
-    <meta name="url" content="http://geo.azmag.gov/maps/....../">
+    <link type="text/plain" rel="author" href="http://vwolfley.github.io/find-extent/humans.txt">
+    <meta name="contact" content="@vernwolfley">
+    <meta name="url" content="http://vwolfley.github.io/find-extent/">
     <meta name="creation-date" content="03/03/2014">
     <meta name="revision-date" content="04/28/2014">
     <meta name="version" content="1.1.0">
@@ -19,6 +19,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Load CSS -->
     <!-- ArcGIS core CSS -->
     <link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css">
     <link rel="stylesheet" href="http://js.arcgis.com/3.9/js/dojo/dijit/themes/claro/claro.css">
