--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/esri/css/esri.css">
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/dijit/themes/claro/claro.css">
     <!-- Custom styles for this Application -->
-    <link rel="stylesheet" href="app/css/normalize.css">
-    <link rel="stylesheet" href="app/css/main.css">
+    <!-- <link rel="stylesheet" href="app/css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="app/css/main.css"> -->
     <link rel="stylesheet" href="css/concat.min.css">
 
     <script src="app/js/vendor/modernizr-2.7.1.min.js"></script>
@@ -55,16 +55,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://js.arcgis.com/3.20/"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>
-    var dojoConfig = {
-        packages: [{
-            name: "app",
-            location: location.pathname.replace(/\/[^/]+$/, "/") + "app"
-        }]
-    }
-    </script>
-    <script src="app/js/plugins.js"></script>
-    <script src="app/js/main.js"></script>
+    <!-- <script src="app/js/plugins.js"></script> -->
+    <!-- <script src="app/js/main.js"></script> -->
+    <script src="app/js/main_concat.min.js"></script>
 
     </body>
 </html>
