--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,13 @@
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/esri/css/esri.css">
     <link rel="stylesheet" href="https://js.arcgis.com/3.20/dijit/themes/claro/claro.css">
     <!-- Custom styles for this Application -->
+    <!-- comments:comment html -->
     <link rel="stylesheet" href="app/css/normalize.css">
     <link rel="stylesheet" href="app/css/main.css">
-    <!-- <link rel="stylesheet" href="css/concat.min.css"> -->
+    <!-- endcomments -->
+    <!-- comments:uncomment html -->
+    <!-- <link rel="stylesheet" href="app/css/concat.min.css"> -->
+    <!-- endcomments -->
 
     <script src="app/js/vendor/modernizr-2.7.1.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -55,9 +59,13 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://js.arcgis.com/3.20/"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- comments:comment html -->
     <script src="app/js/plugins.js"></script>
     <script src="app/js/main.js"></script>
-    <!-- <script src="app/js/main_concat.min.js"></script> -->
+    <!-- endcomments -->
+    <!-- comments:uncomment html -->
+    <!-- <script src="app/js/main-concat.min.js"></script> -->
+    <!-- endcomments -->
 
     </body>
 </html>
